--- a/translation/en/ad/res_shipping/file_list.txt
+++ b/translation/en/ad/res_shipping/file_list.txt
@@ -1,1 +1,1 @@
-EADaDo6Vtz5Yg22qQkuptKWBTugsaF+Ovgf+3DRwImWRiOQ940gDBsCmLJTrMJzHIttJmY9/3Vs5cS/RySpclhvJBktFOfc6ijZX1NY1/WRYo3+JkwZ4LOrM46KKpAlQidFJb3GVmzcfYH2+f9lVW0sZc4zGfOP6uHA=
+{"File":{"Name":"pvz2_l.txt","Hash":"B610D0F18B9EFEB9FD0C92A5D49EAD22"}}
