--- a/translation/en/ad/res_shipping/file_list.txt
+++ b/translation/en/ad/res_shipping/file_list.txt
@@ -1,1 +1,1 @@
-{"File":{"Name":"pvz2_l.txt","Hash":"B610D0F18B9EFEB9FD0C92A5D49EAD22"}}
+EADaDo6Vtz5Yg22qQkuptKWBTugsaF+OvgdwjW81suSBx4RDxIrsHLaMSAydBS1gHh/q4hHDhJ5mi9rlkqNatFgvEESZjVUKZM/ht042XLz2Q9H+DdWXDghoXTY3Y/55JxN2YBeuj26rE0oKAT2RXtAsL5O+v6rWkQA=
